--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "@material-ui/icons": "^4.11.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2",
+    "router-dom": "^2.2.9",
     "single-spa-react": "^4.3.1"
   }
 }
